--- a/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
+++ b/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xpl-on-Zqp">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="300" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xpl-on-Zqp">
                                 <rect key="frame" x="5" y="25" width="365" height="637"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -28,7 +28,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="365" height="299.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CYk-xX-LJe">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CYk-xX-LJe">
                                                     <rect key="frame" x="20" y="16" width="325" height="268"/>
                                                 </imageView>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="fXy-UW-mHg">
@@ -36,12 +36,12 @@
                                                 </activityIndicatorView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="CYk-xX-LJe" firstAttribute="top" secondItem="g5P-iI-bds" secondAttribute="topMargin" constant="5" id="Cyt-Jh-EXs"/>
-                                                <constraint firstItem="CYk-xX-LJe" firstAttribute="leading" secondItem="g5P-iI-bds" secondAttribute="leadingMargin" constant="5" id="Js2-kA-s8s"/>
+                                                <constraint firstItem="CYk-xX-LJe" firstAttribute="top" secondItem="g5P-iI-bds" secondAttribute="topMargin" constant="5" id="AAk-y4-mzf"/>
                                                 <constraint firstItem="fXy-UW-mHg" firstAttribute="centerX" secondItem="g5P-iI-bds" secondAttribute="centerX" id="KoI-YT-Brj"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="CYk-xX-LJe" secondAttribute="trailing" constant="5" id="Vgl-QQ-rhb"/>
                                                 <constraint firstItem="fXy-UW-mHg" firstAttribute="centerY" secondItem="g5P-iI-bds" secondAttribute="centerY" id="a3X-eb-jVD"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="CYk-xX-LJe" secondAttribute="bottom" constant="5" id="uRU-po-HyH"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="CYk-xX-LJe" secondAttribute="bottom" constant="5" id="c7D-iJ-rDy"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="CYk-xX-LJe" secondAttribute="trailing" constant="5" id="eTh-f3-VBu"/>
+                                                <constraint firstItem="CYk-xX-LJe" firstAttribute="leading" secondItem="g5P-iI-bds" secondAttribute="leadingMargin" constant="5" id="kld-ah-zrx"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -61,6 +61,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="flowerTable" destination="Xpl-on-Zqp" id="6d6-oN-siP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
