--- a/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
+++ b/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
@@ -31,11 +31,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="754" verticalCompressionResistancePriority="754" translatesAutoresizingMaskIntoConstraints="NO" id="CYk-xX-LJe">
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="754" verticalCompressionResistancePriority="754" translatesAutoresizingMaskIntoConstraints="NO" id="CYk-xX-LJe">
                                                     <rect key="frame" x="0.0" y="50" width="414" height="300"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="300" identifier="01" id="mjZ-Yp-z8D"/>
+                                                        <constraint firstAttribute="height" priority="999" constant="300" identifier="01" id="mjZ-Yp-z8D"/>
                                                     </constraints>
                                                     <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="0.0" bottom="8" trailing="0.0"/>
                                                 </imageView>
@@ -48,7 +48,10 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="AIq-I4-5Qr" secondAttribute="height" multiplier="1:1" id="nN9-o0-9ZN"/>
                                                             </constraints>
-                                                            <state key="normal" title="lv" backgroundImage="like"/>
+                                                            <state key="normal" title="lv" image="like"/>
+                                                            <connections>
+                                                                <action selector="likeButtonPressedEvent:" destination="kec-7G-jEs" eventType="touchUpInside" id="DuS-9K-ctd"/>
+                                                            </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T0x-aZ-bFN" userLabel="Comment">
                                                             <rect key="frame" x="60" y="10" width="30" height="30"/>
@@ -56,7 +59,7 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="T0x-aZ-bFN" secondAttribute="height" multiplier="1:1" id="Ris-58-yhY"/>
                                                             </constraints>
-                                                            <state key="normal" title="cmt" backgroundImage="chat"/>
+                                                            <state key="normal" title="cmt" image="chat"/>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PoU-04-BAj" userLabel="Share">
                                                             <rect key="frame" x="110" y="10" width="30" height="30"/>
@@ -64,7 +67,7 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="PoU-04-BAj" secondAttribute="height" multiplier="1:1" id="EcJ-Ec-oCu"/>
                                                             </constraints>
-                                                            <state key="normal" title="shr" backgroundImage="share"/>
+                                                            <state key="normal" title="shr" image="share"/>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3n-60-wlO" userLabel="Pin">
                                                             <rect key="frame" x="374" y="10" width="30" height="30"/>
@@ -72,13 +75,12 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="h3n-60-wlO" secondAttribute="height" multiplier="1:1" id="8kB-NG-JYl"/>
                                                             </constraints>
-                                                            <state key="normal" title="pin" backgroundImage="bookmark"/>
+                                                            <state key="normal" title="pin" image="bookmark"/>
                                                         </button>
                                                     </subviews>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                                     <constraints>
                                                         <constraint firstItem="PoU-04-BAj" firstAttribute="centerY" secondItem="i5X-Gy-FD3" secondAttribute="centerY" id="0qH-Qj-QrK"/>
-                                                        <constraint firstAttribute="height" constant="50" id="2Uz-DD-Xc8"/>
                                                         <constraint firstItem="PoU-04-BAj" firstAttribute="leading" secondItem="T0x-aZ-bFN" secondAttribute="trailing" constant="20" id="9v3-ow-8S2"/>
                                                         <constraint firstItem="T0x-aZ-bFN" firstAttribute="centerY" secondItem="i5X-Gy-FD3" secondAttribute="centerY" id="H4U-Ms-w6m"/>
                                                         <constraint firstAttribute="trailing" secondItem="h3n-60-wlO" secondAttribute="trailing" constant="10" id="HaL-J8-bff"/>
@@ -97,36 +99,41 @@
                                                 <view contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nOC-f2-FLo" userLabel="InfoView">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="O3Y-Zu-dhE">
-                                                            <rect key="frame" x="10" y="10" width="394" height="30"/>
-                                                            <subviews>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home" translatesAutoresizingMaskIntoConstraints="NO" id="1wV-a2-WGm" userLabel="Avatar">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                                                    <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" secondItem="1wV-a2-WGm" secondAttribute="height" multiplier="1:1" id="Rcg-cO-an3"/>
-                                                                    </constraints>
-                                                                </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1EB-De-qhn" userLabel="Name">
-                                                                    <rect key="frame" x="50" y="5" width="344" height="20.5"/>
-                                                                    <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="753" horizontalCompressionResistancePriority="753" verticalCompressionResistancePriority="753" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1EB-De-qhn" userLabel="Name">
+                                                            <rect key="frame" x="55" y="5" width="354" height="40"/>
                                                             <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                                        </stackView>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wV-a2-WGm" userLabel="Avatar">
+                                                            <rect key="frame" x="5" y="5" width="40" height="40"/>
+                                                            <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" priority="999" constant="40" identifier="userUmageHeight" id="1Ql-vm-sqn"/>
+                                                                <constraint firstAttribute="width" secondItem="1wV-a2-WGm" secondAttribute="height" multiplier="1:1" id="Rcg-cO-an3"/>
+                                                            </constraints>
+                                                        </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="0Z0-3O-PAd"/>
-                                                        <constraint firstItem="O3Y-Zu-dhE" firstAttribute="leading" secondItem="nOC-f2-FLo" secondAttribute="leading" constant="10" id="1hQ-eF-niU"/>
-                                                        <constraint firstItem="O3Y-Zu-dhE" firstAttribute="top" secondItem="nOC-f2-FLo" secondAttribute="top" constant="10" id="Wee-ye-A4Y"/>
-                                                        <constraint firstAttribute="trailing" secondItem="O3Y-Zu-dhE" secondAttribute="trailing" constant="10" id="gQ6-qu-4j0"/>
-                                                        <constraint firstAttribute="bottom" secondItem="O3Y-Zu-dhE" secondAttribute="bottom" constant="10" id="k4t-jw-E6w"/>
+                                                        <constraint firstItem="1wV-a2-WGm" firstAttribute="top" secondItem="nOC-f2-FLo" secondAttribute="top" constant="5" id="8yZ-wv-Ttw"/>
+                                                        <constraint firstItem="1EB-De-qhn" firstAttribute="leading" secondItem="1wV-a2-WGm" secondAttribute="trailing" constant="10" id="BuR-Y8-rYR"/>
+                                                        <constraint firstAttribute="trailing" secondItem="1EB-De-qhn" secondAttribute="trailing" constant="5" id="DUu-VT-7yK"/>
+                                                        <constraint firstItem="1EB-De-qhn" firstAttribute="centerY" secondItem="1wV-a2-WGm" secondAttribute="centerY" id="ZCT-zK-9k6"/>
+                                                        <constraint firstAttribute="bottom" secondItem="1wV-a2-WGm" secondAttribute="bottom" constant="5" id="akO-Lf-w8C"/>
+                                                        <constraint firstItem="1wV-a2-WGm" firstAttribute="leading" secondItem="nOC-f2-FLo" secondAttribute="leading" constant="5" id="ejd-ni-Why"/>
+                                                        <constraint firstAttribute="bottom" secondItem="1EB-De-qhn" secondAttribute="bottom" constant="5" id="i6i-xV-PpU"/>
+                                                        <constraint firstItem="1EB-De-qhn" firstAttribute="top" secondItem="nOC-f2-FLo" secondAttribute="top" constant="5" id="j1p-Nh-Deg"/>
                                                     </constraints>
                                                 </view>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g9Z-aW-BTv" userLabel="LikeImageView">
+                                                    <rect key="frame" x="157" y="150" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="g9Z-aW-BTv" secondAttribute="height" multiplier="1:1" id="EYi-w1-SuH"/>
+                                                        <constraint firstAttribute="height" constant="100" id="d9Z-qP-9IF"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                             <constraints>
@@ -136,8 +143,11 @@
                                                 <constraint firstItem="nOC-f2-FLo" firstAttribute="top" secondItem="g5P-iI-bds" secondAttribute="top" identifier="03" id="IJ6-Es-qNl"/>
                                                 <constraint firstItem="CYk-xX-LJe" firstAttribute="trailing" secondItem="g5P-iI-bds" secondAttribute="trailing" identifier="05" id="In5-go-HXY"/>
                                                 <constraint firstAttribute="bottom" secondItem="i5X-Gy-FD3" secondAttribute="bottom" identifier="10" id="JNO-g3-Tf3"/>
+                                                <constraint firstItem="g9Z-aW-BTv" firstAttribute="centerY" secondItem="CYk-xX-LJe" secondAttribute="centerY" id="Pi9-FR-Qob"/>
                                                 <constraint firstAttribute="trailing" secondItem="i5X-Gy-FD3" secondAttribute="trailing" identifier="11" id="cQ8-Ow-Lpk"/>
                                                 <constraint firstItem="CYk-xX-LJe" firstAttribute="leading" secondItem="g5P-iI-bds" secondAttribute="leading" identifier="06" id="gJx-xV-9Hh"/>
+                                                <constraint firstItem="i5X-Gy-FD3" firstAttribute="height" secondItem="nOC-f2-FLo" secondAttribute="height" id="tgV-nv-tWu"/>
+                                                <constraint firstItem="g9Z-aW-BTv" firstAttribute="centerX" secondItem="CYk-xX-LJe" secondAttribute="centerX" id="wlR-Hm-KM3"/>
                                                 <constraint firstItem="CYk-xX-LJe" firstAttribute="top" secondItem="nOC-f2-FLo" secondAttribute="bottom" identifier="07" id="xPb-GK-4jX"/>
                                                 <constraint firstItem="nOC-f2-FLo" firstAttribute="leading" secondItem="g5P-iI-bds" secondAttribute="leading" identifier="04" id="y7r-dy-7fs"/>
                                             </constraints>
@@ -147,8 +157,10 @@
                                         <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="0.0" bottom="8" trailing="0.0"/>
                                         <connections>
                                             <outlet property="buttonView" destination="i5X-Gy-FD3" id="t6r-6S-4mQ"/>
-                                            <outlet property="flowerImageView" destination="CYk-xX-LJe" id="jYc-7C-Igq"/>
+                                            <outlet property="heartImageView" destination="g9Z-aW-BTv" id="Qgw-kL-chm"/>
                                             <outlet property="imageHeightConstraint" destination="mjZ-Yp-z8D" id="Z6X-41-fbD"/>
+                                            <outlet property="likeButton" destination="AIq-I4-5Qr" id="fhk-Ga-Vwj"/>
+                                            <outlet property="mainImageView" destination="CYk-xX-LJe" id="jYc-7C-Igq"/>
                                             <outlet property="userImageView" destination="1wV-a2-WGm" id="NZ5-8K-ojD"/>
                                             <outlet property="userInformationView" destination="nOC-f2-FLo" id="dXt-1e-45z"/>
                                             <outlet property="userNameLabel" destination="1EB-De-qhn" id="MdO-Nk-sBL"/>
@@ -204,7 +216,6 @@
     <resources>
         <image name="bookmark" width="384" height="384"/>
         <image name="chat" width="384" height="384"/>
-        <image name="home" width="273.60000610351562" height="273.60000610351562"/>
         <image name="like" width="384" height="384"/>
         <image name="share" width="384" height="384"/>
     </resources>
