--- a/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
+++ b/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Girlstagram-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ImageListViewController" customModule="FlowerForever" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ImagesTableViewController" customModule="FlowerForever" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,7 +24,7 @@
                                 <color key="separatorColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 <color key="sectionIndexBackgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="400" id="kec-7G-jEs" customClass="ImageCell" customModule="FlowerForever" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="400" id="kec-7G-jEs" customClass="ImageTableCell" customModule="FlowerForever" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="400"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kec-7G-jEs" id="g5P-iI-bds">
@@ -131,7 +131,7 @@
                                                     <rect key="frame" x="157" y="150" width="100" height="100"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="g9Z-aW-BTv" secondAttribute="height" multiplier="1:1" id="EYi-w1-SuH"/>
-                                                        <constraint firstAttribute="height" constant="100" id="d9Z-qP-9IF"/>
+                                                        <constraint firstAttribute="height" constant="100" id="qNE-Ph-HPY"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
@@ -179,7 +179,14 @@
                         <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Girlstagram" largeTitleDisplayMode="never" id="w7w-AM-oCA"/>
+                    <navigationItem key="navigationItem" title="Girlstagram" largeTitleDisplayMode="never" id="w7w-AM-oCA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="GuZ-oE-rp9">
+                            <connections>
+                                <action selector="formatChangeButtonTapped:" destination="BYZ-38-t0r" id="4yM-jo-UMx"/>
+                                <segue destination="nPD-Tg-Uaf" kind="show" id="O34-Ji-kDA"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="imagesTable" destination="Xpl-on-Zqp" id="6d6-oN-siP"/>
                     </connections>
@@ -187,6 +194,89 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1043.4782608695652" y="132.58928571428572"/>
+        </scene>
+        <!--Images Collection View Controller-->
+        <scene sceneID="jn1-b8-iN6">
+            <objects>
+                <viewController id="nPD-Tg-Uaf" customClass="ImagesCollectionViewController" customModule="FlowerForever" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0gG-S8-R6C">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YnC-Ms-Aw2" userLabel="Images Collection">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0H1-5h-Zcz">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="ImageCell" id="7Kh-Ht-9aX" customClass="ImageCollectionCell" customModule="FlowerForever" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="imc-fR-e49" userLabel="MainImageView">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </imageView>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bOW-gr-nvt">
+                                                    <rect key="frame" x="72" y="72" width="56" height="56"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="bOW-gr-nvt" secondAttribute="height" multiplier="1:1" id="JrM-CU-I9c"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="likeRed" translatesAutoresizingMaskIntoConstraints="NO" id="FRE-TX-BaV">
+                                                    <rect key="frame" x="5" y="155" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="FRE-TX-BaV" secondAttribute="height" multiplier="1:1" id="vOz-2g-APp"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="imc-fR-e49" firstAttribute="trailing" secondItem="7Kh-Ht-9aX" secondAttribute="trailing" id="1H3-zC-U1E"/>
+                                            <constraint firstItem="imc-fR-e49" firstAttribute="leading" secondItem="7Kh-Ht-9aX" secondAttribute="leading" id="GFo-hq-Sxj"/>
+                                            <constraint firstItem="FRE-TX-BaV" firstAttribute="leading" secondItem="7Kh-Ht-9aX" secondAttribute="leading" constant="5" id="SoX-bz-ddg"/>
+                                            <constraint firstItem="imc-fR-e49" firstAttribute="top" secondItem="7Kh-Ht-9aX" secondAttribute="top" id="Ydf-mt-yrJ"/>
+                                            <constraint firstItem="bOW-gr-nvt" firstAttribute="centerX" secondItem="7Kh-Ht-9aX" secondAttribute="centerX" id="bZU-tK-64C"/>
+                                            <constraint firstItem="imc-fR-e49" firstAttribute="bottom" secondItem="7Kh-Ht-9aX" secondAttribute="bottom" id="buJ-vH-RKR"/>
+                                            <constraint firstItem="FRE-TX-BaV" firstAttribute="height" secondItem="imc-fR-e49" secondAttribute="height" multiplier="1:5" id="g7g-YA-0gY"/>
+                                            <constraint firstItem="bOW-gr-nvt" firstAttribute="centerY" secondItem="7Kh-Ht-9aX" secondAttribute="centerY" id="n9N-HG-b3j"/>
+                                            <constraint firstItem="bOW-gr-nvt" firstAttribute="top" secondItem="7Kh-Ht-9aX" secondAttribute="topMargin" constant="20" id="o9R-6g-12F"/>
+                                            <constraint firstAttribute="bottom" secondItem="FRE-TX-BaV" secondAttribute="bottom" constant="5" id="tGS-Pw-JBe"/>
+                                        </constraints>
+                                        <size key="customSize" width="200" height="200"/>
+                                        <connections>
+                                            <outlet property="heartImageView" destination="bOW-gr-nvt" id="3HZ-x5-3gn"/>
+                                            <outlet property="imageView" destination="imc-fR-e49" id="dJp-UM-GuO"/>
+                                            <outlet property="likeImageView" destination="FRE-TX-BaV" id="ohw-rg-U7a"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YnC-Ms-Aw2" firstAttribute="top" secondItem="ujT-3G-eTM" secondAttribute="top" id="2bu-Mr-g06"/>
+                            <constraint firstItem="YnC-Ms-Aw2" firstAttribute="bottom" secondItem="ujT-3G-eTM" secondAttribute="bottom" id="8n8-El-MDc"/>
+                            <constraint firstItem="YnC-Ms-Aw2" firstAttribute="trailing" secondItem="ujT-3G-eTM" secondAttribute="trailing" id="CmC-0G-EkN"/>
+                            <constraint firstItem="YnC-Ms-Aw2" firstAttribute="leading" secondItem="ujT-3G-eTM" secondAttribute="leading" id="u0z-s6-eds"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ujT-3G-eTM"/>
+                    </view>
+                    <connections>
+                        <outlet property="imagesCollection" destination="YnC-Ms-Aw2" id="ZOV-pJ-7Sy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="26T-RW-EHT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2037.68115942029" y="132.58928571428572"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uUn-Rf-jJ9">
@@ -217,6 +307,7 @@
         <image name="bookmark" width="384" height="384"/>
         <image name="chat" width="384" height="384"/>
         <image name="like" width="384" height="384"/>
+        <image name="likeRed" width="40" height="40"/>
         <image name="share" width="384" height="384"/>
     </resources>
 </document>
